force-app/main/default/objects/AR_Virtual_Bank_Account__c/fields/Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account__c</fullName>
    <label>Bank Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AR_Bank_Account__c.Account_Type__c</field>
            <operation>equals</operation>
            <value>Escrow</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AR_Bank_Account__c</referenceTo>
    <relationshipLabel>Virtual Bank Accounts</relationshipLabel>
    <relationshipName>Virtual_Bank_Accounts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>