force-app/main/default/objects/AR_Virtual_Bank_Account__c/fields/IBAN__c.field-meta.xml
<CustomField>
    <fullName>IBAN__c</fullName>
    <label>IBAN</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>