force-app/main/default/objects/AR_Virtual_Bank_Account__c/fields/Inventory__c.field-meta.xml
<CustomField>
    <fullName>Inventory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventory</label>
    <referenceTo>Inventory__c</referenceTo>
    <relationshipLabel>Virtual Bank Accounts</relationshipLabel>
    <relationshipName>Virtual_Bank_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>