force-app/main/default/objects/AR_Virtual_Bank_Account__c/fields/Virtual_Bank_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Virtual_Bank_Account_Number__c</fullName>
    <label>Virtual Bank Account Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>